# pymecht

./: .gitignore  .readthedocs.yaml  .~lock.Changes.txt#  CITATION.cff  CONTRIBUTING.md  Changes.txt  LICENSE  LinearFEM.py  MCMC.py  MatModel.py  ParamFitter.py  README.md  SampleExperiment.py  __init__.py  biax-data.npz  biax-fitting.py  examples.py  examples_CR.ipynb  formatted_profile_1st_order.txt  formatted_profile_2nd_order.txt  formatted_profile_3rd_order.txt  pyproject.toml  requirements.txt  setup.py  test2.py
.github/workflows/: ci-tests.yml
Examples/: 01-tutorial.ipynb  03-param-example.ipynb  04-uniaxial-example.ipynb  09-mcmc-example.ipynb  11-layered-biax.ipynb  12-layered-tube.ipynb  Uniaxial_extension.ipynb  biax-example.ipynb  biax-fitting.py  biax-model-prob.py  examples.py  examples_CR.ipynb  layered-biax.ipynb  layered-tube.ipynb  layered-tube2.ipynb  layered-uniax.ipynb  matmodel-example.ipynb  mcmc-example.ipynb  param-example.ipynb  paramfitter-example.ipynb  randomparam-example.ipynb  test2.py  tube-model-prob.py  tutorial.ipynb
MatModel/: MatModel.py  __init__.py
RandomParameters/: __init__.py
SampleExperiment/: __init__.py
Tests/: test_arbitrary_MatModel.py  test_examples.py
docs/: requirements.txt
docs/source/: LayeredTube.rst  conf.py  index.rst  matmodel.rst  mcmc.rst  paramdict.rst  paramfitter.rst  (+8 more)
joss-paper/: paper.bib  paper.md
pymecht/: MCMC.py  MatModel.py  ParamDict.py  ParamFitter.py  RandomParameters.py  SampleExperiment.py  __init__.py  _version.py  pyproject.toml
tests/: test_examples.py
workflows/: ci-tests.yml
(+1 files in other folders)
